Cleaned up unused/inefficient methods in MetadataSearch, simplified MetadataSearch to use the parameter variable to find/update the resource instead of instance variables; DRYing up MetadataSearchIT, MetadataDaoIT, and MetadataDataProcessingIT